# real-time-binance-metrics

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  build.gradle  docker-compose.yml  main.py  pyproject.toml  settings.gradle
.github/workflows/: ci.yaml
app/models/: portfolio.py
app/services/: optimizer.py
argocd/: application.yaml
clickhouse/: init.sql  users.xml
docs/: INFRASTRUCTURE.md
flink/jobs/: Dockerfile  build.gradle
flink/jobs/src/main/java/com/binance/flink/: OhlcvJob.java
flink/jobs/src/main/java/com/marketdata/flink/: OhlcvJob.java  TradeStreamJob.java
grafana/provisioning/dashboards/: ohlcv.json
grafana/provisioning/datasources/: clickhouse.yaml
helm/: values.yaml
helm/portfolio-optimizer/: Chart.yaml  values.yaml
helm/portfolio-optimizer/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  secret.yaml  service.yaml  serviceaccount.yaml
helm/templates/: flink.yaml  grafana.yaml  kafka.yaml  producer.yaml  timescaledb.yaml
producer/: build.gradle
producer/src/main/java/com/binance/producer/: Config.java  Main.java
producer/src/main/java/com/binance/producer/health/: HealthServer.java
producer/src/main/java/com/binance/producer/kafka/: KafkaProducerClient.java
producer/src/main/java/com/binance/producer/model/: BinanceTrade.java  DlqMessage.java  OrderBookSnapshot.java  Trade.java
producer/src/main/java/com/binance/producer/ws/: BinanceWebSocketClient.java  CoinbaseWebSocketClient.java  KrakenWebSocketClient.java
tests/: test_optimizer.py  test_routes.py
timescaledb/: init.sql
(+16 files in other folders)
