[project]
name = "portfolio-optimizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128.2",
    "httpx>=0.28.1",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "pyportfolioopt>=1.5.6",
    "scipy>=1.13.1",
    "uvicorn[standard]>=0.39.0",
]

[dependency-groups]
dev = [
    "locust>=2.34.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
